# CoVAPSy-SETI-2025

./: .gitignore  .gitmodules  README.md  create_carte_from_slam.py  live_slam_to_png_auto.py  make_and_source.sh  pyproject.toml  requirements.txt  slam_live_tmp.yaml  slam_map.pgm  slam_map.yaml  webots_start.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  make_and_source.sh  setup_ros.sh
Dependancies/: dependancies_install_tutorial.md
Software/: README.md  gilbert_conduitenaive1.py  gilbert_webots_example.py  vehicle.py  vehicle_conduitenaive1.py
Software/gilbert_driver/: GilbertDriver.py  gilbert_driver.py  gilbert_driver_generic.py  gilbert_driver_webots.py
Software/node_ros_2/tt02_driver/: package.xml  setup.cfg  setup.py
Software/node_ros_2/tt02_driver/MPC/: MPC.py  __init__.py  lidar_model.py  ros2_mpc_node.py  ros2_mpc_plotter.py  simulation.py  spatial_bicycle_models.py  tools.py
Software/node_ros_2/tt02_driver/config/: mapper_params_online_async.yaml
Software/node_ros_2/tt02_driver/launch/: follower_launch.py  measurement_launch.py  mpc_launch.py  rl1_launch.py  slam_launch.py
Software/node_ros_2/tt02_driver/tt02_driver/: MPC.py  circuit_follower.py  circuit_follower_alt.py  driver_node.py  gilbert_driver_generic.py  gilbert_driver_hardware.py  gilbert_driver_webots.py  lidar_scan.txt  measurements_node.py  rl1_agent.py  rl1_env.py  utils.py
Software/path_finding/: path_finding_pipeline_flat.py
Software/super_mega_fusion/: common.py  fusion.py  fusion_pipeline_flat.py  lidar_scan.txt  path_planner.py  slam_path_planner_test.py  super_mega_fusion_old.py  test_old.py
Webots/: README.md  lib_track_generator.py  lib_webots_world.py  main_gen_world.py
Webots/Webots_SETI/protos/: TT02_2023b.proto
Webots/Webots_SETI/worlds/: .Piste_CoVAPSy_2025a.wbproj  Piste_CoVAPSy_2025a.wbt
Webots/Webots_SETI_gen/protos/: TT02_2023b.proto
Webots/Webots_SETI_gen/worlds/: .CoVAPSy_SETI_2025.wbproj  .CoVAPSy_SETI_2025_generated.wbproj  .CoVAPSy_SETI_2025_test_supermegafusion.wbproj  CoVAPSy_SETI_2025.wbt  CoVAPSy_SETI_2025_generated copy.wbt  CoVAPSy_SETI_2025_generated.wbt  CoVAPSy_SETI_2025_test_supermegafusion.wbt
