[project]
name = "CoVAPSy"
version = "1"
description = "Dépendances Python pour Simu Webot + controlleur hardware/simu"
readme = "README.md"
requires-python = "~=3.12.12"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "argcomplete==3.6.3",
    "attrs==25.4.0",
    "catkin_pkg==1.1.0",
    "cffi==2.0.0",
    "colcon-argcomplete==0.3.3",
    "colcon-bash==0.5.0",
    "colcon-cd==0.1.1",
    "colcon-cmake==0.2.29",
    "colcon-common-extensions==0.3.0",
    "colcon-core==0.20.1",
    "colcon-defaults==0.2.9",
    "colcon-devtools==0.3.0",
    "colcon-library-path==0.2.1",
    "colcon-metadata==0.2.5",
    "colcon-output==0.2.13",
    "colcon-package-information==0.4.0",
    "colcon-package-selection==0.2.10",
    "colcon-parallel-executor==0.4.0",
    "colcon-pkg-config==0.1.0",
    "colcon-powershell==0.4.0",
    "colcon-python-setup-py==0.2.9",
    "colcon-recursive-crawl==0.2.3",
    "colcon-ros==0.5.0",
    "colcon-test-result==0.3.8",
    "colcon-zsh==0.5.0",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.3",
    "controller==0.1.0",
    "coverage==7.12.0",
    "cryptography==46.0.3",
    "cycler==0.12.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "docutils==0.22.3",
    "empy==3.3.4",
    "exceptiongroup==1.3.1",
    "flake8==7.3.0",
    "fonttools==4.61.0",
    "frozenlist==1.7.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib_resources==6.5.2",
    "iniconfig==2.3.0",
    "kiwisolver==1.4.9",
    "lark-parser==0.12.0",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "matplotlib==3.10.7",
    "mccabe==0.7.0",
    "msgpack==1.1.2",
    "multidict==6.6.3",
    "munkres==1.1.4",
    "netifaces==0.11.0",
    "numpy==2.2.6",
    "openvino==2025.4.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "pip==25.3",
    "pluggy==1.6.0",
    "ply==3.11",
    "propcache==0.3.1",
    "psutil==7.1.3",
    "opencv-python==4.12.0.88",
    "pybind11==3.0.1",
    "pybullet==3.2.7",
    "pycairo==1.29.0",
    "pycodestyle==2.14.0",
    "pycollada==0.9.2",
    "pycparser==2.22",
    "pydocstyle==6.3.0",
    "pydot==4.0.1",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "PyQt5==5.15.11",
    "pyqt-builder==1.18.2",
    "PyQt5-sip==12.17.0",
    "pyserial==3.5",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-repeat==0.9.4",
    "pytest-rerunfailures==16.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "rosdistro==1.0.1",
    "rospkg==1.6.0",
    "setuptools==79.0.1",
    "sip==6.10.0",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "toml==0.10.2",
    "tomli==2.3.0",
    "typing_extensions==4.15.0",
    "unicodedata2==17.0.0",
    "vtk==9.4.2",
    "wheel==0.45.1",
    "wslink==2.5.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.7.1",
]

[tool.setuptools]
py-modules = []
